# town-hall

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  SETUP.md  TODO.md  skills-lock.json
backend/: .env.example  .sql-formatter.json  Cargo.toml
backend/.sqlx/: query-0a8cb613b7c6b819be56cfb9a68c8b9978d27b32504cbacd42fc56b24a42eb26.json  query-179bca32dca6a2124f2dcf977a51548ab4380e9996356bf00385f2fba5bfd286.json  query-2964f4904496607c56e19e2a4c32a1c3ff23179a459d56fe215a83866bf95f46.json  query-2bc9a322122ebc4d434354c30943f8fa79048b9f0fc0f43270d091403e082fa3.json  query-3aff123ea480d2ccb2b749f76b86a423de691a35b58a4c694e094094aa075cf2.json  query-4751657ecc2504ad0eca1feb725bd8eb93fb1460ea86ab46eab2a956f2bad257.json  query-4e4da65772ae7dee713aaa246727d3e325958e04997186cabfac95dc8ef4323c.json  query-51c42f4dfa9fd6156921eb4b6687cfa440ff585e83c5918e476d57bfbe638151.json  query-53fd7769d8f0feb82b9809b6a07fbe02b7b7f879144a70a9e68e80dc1b02f9e5.json  query-5b4184e6fd0849226ca772a394afe967a51fd898ce677c944bc3fb5c76dc33d2.json  query-5b6e8f6157ce1b05207f51dbe1f46c8aee03a8a773cf413153238adcac0530ee.json  query-5f1dcf8ac70f4f9f31e9d8c42dbf88d7532e7701e3a6d96009978db4dcee929c.json  query-6168c56c88df114d91e8395faccf5bc0a65fabc92c1219bf49be8f07ad8f5f43.json  query-76f561e20cf68ceb0f1dbf3b674778fa2850e7b6f9ef62c9fd277a833cb873ce.json  query-79ceea013d24bc3576c932390209968725ab65c4374789a72a77abb77c0212f4.json  query-7b7526794ec64babe10f293957c630660df3c2e885b4a93f41170c10f6e9ac7e.json  query-8676366061d2f073a3f7f6e4023536a2c80157613e071baa751956004453eb1f.json  query-948073a30a8ff3d4b22728241f51267f4166786daf7faabb706444fb6afa3783.json  query-ac208b6b59345cdbd7e7ff6c4e5859b2718b9032ed8bc6cf070193af5fb73ef8.json  query-cfa4942f399dbfb913adc5f9cd02e8543469b07168ee7f5613e250a3188dcbac.json  query-e1d3f7a7f284678e62b8ab34968733da1d0a6377a03062c2e3c73777b318ea5b.json  query-ea6c4b42fa549ff5b0ee8a4bed5583dbddfec84ec8575e3f4f01d2ecbfb98682.json  query-edf0ce7ed24a502cc9effb88e5a626f4c1ee451cb83c6451fafc4d22272a5b93.json  query-eea42aba40a304755873f9e10c9a0b9123c855b42b36e42089105e9abe7af5a8.json  query-f05063ad4957f5f70d3ff7210f6d666aedbb9ff6aac417662fbc5f6bbf1dc6e7.json  query-fe4d7730e9cd9de28254e79977137efa35557e4c519002c38dc95c02202818d5.json
backend/migrations/: 0001_setup_users.sql  0002_setup_quests.sql  01_create_users_table.sql  01_setup_auth.sql  01_setup_users.sql  02_create_quests_table.sql  20260305144652_create_users_table.sql
backend/src/: database.rs  error.rs  handlers.rs  lib.rs  main.rs  router.rs  state.rs
backend/src/db/: init.rs  mod.rs  users.rs
backend/src/handlers/: auth.rs  common.rs  helper.rs  normvalid.rs  quest.rs  user.rs  (+1 more)
(+134 files in other folders)
