[package]
name = "town-hall-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
dotenvy = "0.15"
http = "1.4.0"
oauth2 = "5.0"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.18"
specta = { version = "=2.0.0-rc.23", features = ["collect", "derive", "time"] }
specta-typescript = "0.0.10"
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio",
  "time",
  "tls-rustls-aws-lc-rs"
] }
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.50", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
tracing = "0.1"
tracing-subscriber = "0.3"
