[package]
name = "town-hall-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4.6", features = ["derive", "env"] }
dotenvy = "0.15"
http = "1.4"
itertools = "0.14"
oauth2 = "5.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.18"
specta = { version = "=2.0.0-rc.23", features = ["collect", "derive", "time"] }
specta-typescript = "0.0.10"
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio",
  "time",
  "tls-rustls-aws-lc-rs"
] }
thiserror = "2.0"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.50", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
tracing = "0.1"
tracing-subscriber = "0.3"
validator = { version = "0.20", features = ["derive"] }
